--- a/src/app/work-space/work-space-financials/work-space-financials.component.html
+++ b/src/app/work-space/work-space-financials/work-space-financials.component.html
@@ -160,13 +160,13 @@
                             <div _ngcontent-cjp-c64="" class="page-sub-heading">Comments</div>
                         </div>
                     </div>
-                    <div class="txt-outline p-all-20 w-100">
+                    <div class="txt-outline p-all-30 w-100">
                         <div class="row">
-                            <div class="col-sm-1">
-                                <div class="font-purple font-bold br-1-gray lh-14">Michale</div>
-                            </div>
                             <div class="col-sm-2">
-                                <div class="br-1-gray lh-14">Dec 31, 2020   4:40PM IST</div>
+                                <div class="font-purple font-bold br-1-gray lh-14"><img src="assets/images/profile-pic.svg" class="user-icon">Michale</div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="br-1-gray lh-14"><img src="assets/images/time.svg" class="time-icon">Dec 31, 2020   4:40PM IST</div>
                             </div>
                             <div class="col-sm-2">
                                 <div class="font-purple lh-14">Comments 32</div>
@@ -184,11 +184,11 @@
                         <div id="reply" class="collapse mt-20 ml-30">
                             <div class="reply mb-30">
                             <div class="row">
-                                <div class="col-sm-1">
-                                    <div class="font-purple font-bold br-1-gray lh-14">Michale</div>
-                                </div>
                                 <div class="col-sm-2">
-                                    <div class="br-1-gray lh-14">Dec 31, 2020   4:40PM IST</div>
+                                    <div class="font-purple font-bold br-1-gray lh-14"><img src="assets/images/profile-pic.svg" class="user-icon">Michale</div>
+                                </div>
+                                <div class="col-sm-3">
+                                    <div class="br-1-gray lh-14"><img src="assets/images/time.svg" class="time-icon">Dec 31, 2020   4:40PM IST</div>
                                 </div>
                                 <div class="col-sm-2">
                                     <div class="font-purple lh-14">Comments 32</div>
@@ -203,11 +203,11 @@
                             </div>
                             <div class="reply">
                                 <div class="row">
-                                    <div class="col-sm-1">
-                                        <div class="font-purple font-bold br-1-gray lh-14">Michale</div>
-                                    </div>
                                     <div class="col-sm-2">
-                                        <div class="br-1-gray lh-14">Dec 31, 2020   4:40PM IST</div>
+                                        <div class="font-purple font-bold br-1-gray lh-14"><img src="assets/images/profile-pic.svg" class="user-icon">Michale</div>
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <div class="br-1-gray lh-14"><img src="assets/images/time.svg" class="time-icon">Dec 31, 2020   4:40PM IST</div>
                                     </div>
                                     <div class="col-sm-2">
                                         <div class="font-purple lh-14">Comments 32</div>
@@ -233,6 +233,7 @@
                     <div class="txt-outline w-100 p-all-10 bb-2-purple mt-20">
                         <input type="text" placeholder="Start new comments" class="txt-no-border bl-1-gray w-95 pl-10 ml-30">
                     </div>
+                    <div class="send-btn"><img src="assets/images/send.svg"> </div>
             <!--
             <div class="mb-5">
                 <div class="estimate-table" *ngIf="!isUploadFlag">
@@ -309,3 +310,8 @@
             -->
         </div>
 </main>
+<footer>
+  <div class="container-fluid">
+      <div class="footer">©HiveZen.All rights reserved</div>
+  </div>
+</footer>
