--- a/src/app/work-space/work-space-team/work-space-team.component.html
+++ b/src/app/work-space/work-space-team/work-space-team.component.html
@@ -50,34 +50,33 @@
                     <div class="col-sm-2">
                       <div>{{teamListObj.roleCode}}</div>
                     </div>
-                    <div class="col-sm-1">
-                      <div><img src="assets/images/add-small.png"></div>
+                    <div class="col-sm-1 align-right">
+                      <div><img src="assets/images/edit-icon.svg" class="edit-icon"></div>
+                    </div>
+                  </div>
+                  <div class="bg-white border-gray mt-10 radius-all-3 p-all-10 m-all-20">
+                    <div class="row">
+                      <div class="col-sm-10">
+                        <div>content</div>
+                      </div>
+                      <div class="col-sm-2">
+                        <div class="dropdown align-right">
+                          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown button
+                          </button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Developer</a>
+                            <a class="dropdown-item" href="#">Developer</a>
+                            <a class="dropdown-item" href="#">Developer</a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
 
               <div>
-                <div class="bg-white border-gray mt-10 radius-all-3 p-all-10">
-                  <div class="row">
-  
-                    <div class="col-sm-3">
-                      <div class="font-semibold pl-8">name</div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div>name1</div>
-                    </div>
-                    <div class="col-sm-2">
-                      <div>name2</div>
-                    </div>
-                    <div class="col-sm-2">
-                      <div>name3</div>
-                    </div>
-                    <div class="col-sm-1">
-                      <div>name4</div>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
