--- a/src/app/work-space/work-space-initial-requirement/work-space-initial-requirement.component.html
+++ b/src/app/work-space/work-space-initial-requirement/work-space-initial-requirement.component.html
@@ -104,22 +104,9 @@
                                         <img src="assets/images/style-guide.jpg">
                                     </div>
                                     <button class="btn button-save mr-7 mt-20">Download Design Guide</button>
-                                    <button class="btn button-save mt-20">Download CSS</button>
+                                    <!--<button class="btn button-save mt-20">Download CSS</button>-->
                                 </div>
-                                <div class="col-sm-4">
-                                    <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
-                                        <img src="assets/images/style-guide.jpg">
-                                    </div>
-                                    <button class="btn button-save mr-7 mt-20">Download Design Guide</button>
-                                    <button class="btn button-save mt-20">Download CSS</button>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class=" bg-white border-gray mt-10 radius-all-3 p-all-10 style-guide">
-                                        <img src="assets/images/style-guide.jpg">
-                                    </div>
-                                    <button class="btn button-save mr-7 mt-20">Download Design Guide</button>
-                                    <button class="btn button-save mt-20">Download CSS</button>
-                                </div>
+                               
                             </div>
 
 
