--- a/src/app/work-space/workspace-ai-integration/workspace-ai-integration.component.html
+++ b/src/app/work-space/workspace-ai-integration/workspace-ai-integration.component.html
@@ -6,7 +6,7 @@
                             <div class="page-heading mt-0">Initial Requirements <img src="assets/images/right-arrow.svg" height="17"> Select Style Guide</div>
                         </div>
                         <div class="col-sm-3 align-right">
-                            <button class="btn button-save">Initial Requirements</button>
+                            <button class="btn button-save" (click)="goBack()">Initial Requirements</button>
                         </div> 
                     </div>
                     <form>
