--- a/src/app/console/sign-up-email/sign-up-email.component.html
+++ b/src/app/console/sign-up-email/sign-up-email.component.html
@@ -15,6 +15,7 @@
                                 [ngClass]="{ 'is-invalid': submitted && f1.email.errors }">
                                 <div *ngIf="submitted && f1.email.errors" class="invalid-feedback">
                                     <div *ngIf="f1.email.errors.required">Email ID is required</div>
+                                    <div *ngIf="f1.email.touched">Enter valid Email ID</div>
                                   </div>
                             
                             </div>
