--- a/src/app/console/sign-up-invite-team/sign-up-invite-team.component.html
+++ b/src/app/console/sign-up-invite-team/sign-up-invite-team.component.html
@@ -28,10 +28,13 @@
                                 </div>                              
                               </div>
                           </div>
-                        <div class="col-sm-12 pt-20">
+                        <div [ngClass]="{ 'col-sm-6': emailIds.controls.length!= 1, 'col-sm-12': emailIds.controls.length == 1, 'pt-20': true}">
                             <div class="font-12"><img (click)="addMember()"  src="assets/images/add-icon.png"><span  (click)="addMember()" class="add-txt">Add
                                     another</span></div>
                         </div>
+                        <div *ngIf="emailIds.controls.length!= 1" class="col-sm-6 pt-20"><div class="font-12">
+                            <img style="transform: scale(0.7);"(click)="onDelete()" 
+                            src="assets/images/close-popup.png"><span (click)="addMember()" class="add-txt">Delete</span></div></div>
                         <div class="col-sm-6 pt-50 pr-0"><button class="btn button-no-bg mt-5 w100"
                                 (click)="later()">I'll do it later</button></div>
                         <div class="col-sm-6 pt-50 pl-0"><button class="btn button-save mt-5 w100"
