Deletion logic implemented

--- a/src/app/console/sign-up-invite-team/sign-up-invite-team.component.html
+++ b/src/app/console/sign-up-invite-team/sign-up-invite-team.component.html
@@ -34,7 +34,7 @@
                         </div>
                         <div *ngIf="emailIds.controls.length!= 1" class="col-sm-6 pt-20"><div class="font-12">
                             <img style="transform: scale(0.7);"(click)="onDelete()" 
-                            src="assets/images/close-popup.png"><span (click)="addMember()" class="add-txt">Delete</span></div></div>
+                            src="assets/images/close-popup.png"><span (click)="onDelete()" class="add-txt">Delete</span></div></div>
                         <div class="col-sm-6 pt-50 pr-0"><button class="btn button-no-bg mt-5 w100"
                                 (click)="later()">I'll do it later</button></div>
                         <div class="col-sm-6 pt-50 pl-0"><button class="btn button-save mt-5 w100"
