--- a/src/app/work-space/work-space-wireframe/work-space-wireframe.component.html
+++ b/src/app/work-space/work-space-wireframe/work-space-wireframe.component.html
@@ -45,6 +45,8 @@
           <div class="col-sm-3 pr-0">
             <div class="form-group">
               <select class="form-control" [(ngModel)]="selectedRole" (change)="onChangeReview($event)">
+                <option value="null" id ="null">
+                </option>
                 <option *ngFor="let item of reviewers" value={{item.userId}} id={{item.userId}}>{{item.userName}}
                 </option>
               </select>
@@ -82,7 +84,8 @@
         </div>
         <div class="row" *ngIf="existingReviewer.length >0">
           <div class="col-sm-12">
-            <button *ngFor="let item of existingReviewer;let i = index;" class="btn btn-outline btn-close" disabled><span class="ft-black">{{item['name']}}</span></button>
+            <button *ngFor="let item of existingReviewer;let i = index;" class="btn btn-outline btn-close"><span class="ft-black">{{item['name']}}<img (click)="deleteExistingReviewer(item,i)"
+              src="assets/images/btn-close.png"></span></button>
             
             <!--
             <button class="btn btn-outline btn-close" disabled><span class="ft-black">Reviewer 1</span></button>
