--- a/src/app/work-space/work-space-wireframe/work-space-wireframe.component.html
+++ b/src/app/work-space/work-space-wireframe/work-space-wireframe.component.html
@@ -45,17 +45,19 @@
           <div class="col-sm-3 pr-0">
             <div class="form-group">
               <select class="form-control" [(ngModel)]="selectedRole" (change)="onChangeReview($event)">
-                <option value="null" id ="null">
-                </option>
+                \
                 <option *ngFor="let item of reviewers" value={{item.userId}} id={{item.userId}}>{{item.userName}}
                 </option>
               </select>
             </div>
           </div>
           <div class="col-sm-2 pl-10 pb-20">
-            <button (click)="selectReviewer()" class="btn button-save">Select</button>
+           <!--<button (click)="selectReviewer()" class="btn button-save">Select</button>
+        --> 
+        <button (click)="mapReviewer()" class="btn button-save">Request Review</button>
           </div>
         </div>
+        <!--
         <div class="row" *ngIf="selectedReviewer.length ==0">
           <div class="col-sm-12">
           <div>No reviewer available</div> 
@@ -65,15 +67,11 @@
           <div class="col-sm-12">
             
             <button *ngFor="let item of selectedReviewer;let i = index;" class="btn btn-outline btn-close">{{item['userName']}}<img (click)="deleteSelectedReviewer(item,i)" src="assets/images/btn-close.png"></button>
-            <!--
-            <button class="btn btn-outline btn-close">Reviewer 1<img src="assets/images/btn-close.png"></button>
-            <button class="btn btn-outline btn-close">Reviewer 2<img src="assets/images/btn-close.png"></button>
-            <button class="btn btn-outline btn-close">Reviewer 3<img src="assets/images/btn-close.png"></button>
-            <button class="btn btn-outline btn-close">Reviewer 4<img src="assets/images/btn-close.png"></button>
-            -->
+           
             <button class="btn button-save" (click)="submitReviewer()">Request Review</button>
           </div>
         </div>
+        -->
         <div class="row pl-3 pt-3">
           <div class="heading wireframe_pt1_css wireframe_pt_20">Existing Reviewer</div>
         </div>
