--- a/src/app/work-space/work-space-financials/work-space-financials.component.html
+++ b/src/app/work-space/work-space-financials/work-space-financials.component.html
@@ -24,7 +24,7 @@
                   <div class="col-sm-12">
                     <div class="lh-45 pr-15">
                       <div class="row">
-                          <div class="col-sm-7">
+                          <div class="col-sm-6">
                             <label class="ft-18">Phases</label>
                           </div>
                           <div class="col-sm-2">
@@ -36,6 +36,9 @@
                           <div class="col-sm-1">
                             <label class="ft-18"></label>
                           </div>
+                          <div class="col-sm-1">
+                            <label class="ft-18"></label>
+                          </div>
                         </div>
                       </div>
                       <div>
@@ -43,7 +46,7 @@
                           <div *ngFor="let hivezenPhaseDtlobj of hivezenPhaseDtl" class="bg-white border-gray mt-10 radius-all-3 lh-45 pr-15">
                               <div class="row">
               
-                                <div class="col-sm-7">
+                                <div class="col-sm-6">
                                   <div class="font-semibold pl-8">{{hivezenPhaseDtlobj.devPhase}}</div>
                                 </div>
                                 <div class="col-sm-2 bg-purple">
@@ -54,6 +57,9 @@
                                 </div>
                                 <div (click)="editEstimation(hivezenPhaseDtlobj)" class="col-sm-1">
                                   <div style="text-align: center;cursor: pointer;"><i class="fa fa-edit" style="font-size: 16px;text-align: center;"></i></div>
+                                </div>
+                                <div (click)="deleteEstimation(hivezenPhaseDtlobj)" class="col-sm-1">
+                                  <div style="text-align: center;cursor: pointer;"><i class="fa fa-trash" style="font-size: 16px;text-align: center;"></i></div>
                                 </div>
                               </div>
                             </div>
