--- a/src/app/console/sign-up-set-up-account/sign-up-set-up-account.component.html
+++ b/src/app/console/sign-up-set-up-account/sign-up-set-up-account.component.html
@@ -27,7 +27,7 @@
                         <div class="input-group col-sm-12">
                             <input type="text" class="form-control bg-white" id="AccountName" placeholder="Enter your Account Name"
                         formControlName="micrositeName" [ngClass]="{ 'is-invalid': submitted && f1.micrositeName.errors }">
-                        <span class="input-group-text" id="basic-addon2">.HiveZen.com</span>
+                        <span class="input-group-text" id="basic-addon2">.hivezen.com</span>
                         <div *ngIf="submitted && f1.micrositeName.errors" class="invalid-feedback">
                             <div *ngIf="f1.micrositeName.errors.required">Account Name is required</div>
                           </div>
