--- a/src/app/work-space/work-space-team/work-space-team.component.html
+++ b/src/app/work-space/work-space-team/work-space-team.component.html
@@ -19,16 +19,19 @@
                 <div class="col-sm-3">
                   <label class="ft-18">Resource</label>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                   <label class="ft-18">Email</label>
                 </div>
                 <div class="col-sm-2">
                   <label class="ft-18">Type</label>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-1">
                   <label class="ft-18">Role</label>
                 </div>
                 <div class="col-sm-1">
+                  <label class="ft-18">Status</label>
+                </div>
+                <div class="col-sm-2">
                   <label class="ft-18"></label>
                 </div>
   
@@ -41,17 +44,24 @@
                     <div class="col-sm-3">
                       <div class="font-semibold pl-8">{{teamListObj.userName}}</div>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                       <div>{{teamListObj.email}}</div>
                     </div>
                     <div class="col-sm-2">
                       <div>{{teamListObj.usertype}}</div>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-sm-1">
                       <div>{{teamListObj.roleCode}}</div>
                     </div>
                     <div class="col-sm-1">
-                      <div><img src="assets/images/add-small.png"></div>
+                      <div><span class="badge badge-accepted"
+                        [ngClass]="{'badge-rejected action_status_rejected': teamListObj.statusCode == 'Inactive'}"
+                        >{{teamListObj.statusCode}}</span></div>
+                    </div>
+                    <div class="col-sm-2" style="text-align: right;">
+                      <div style="width: 100px;" *ngIf="teamListObj.statusCode != 'Active'"   (click)="changeTeamStatus(teamListObj,'Active')" class="btn button-save ml-10">Active</div>
+					            <div  style="width: 100px;" *ngIf="teamListObj.statusCode == 'Active'"  (click)="changeTeamStatus(teamListObj,'Inactive')" class="btn button-save ml-10">InActive</div>
+				
                     </div>
                   </div>
                 </div>
