--- a/src/app/work-space/work-space-team/work-space-team.component.html
+++ b/src/app/work-space/work-space-team/work-space-team.component.html
@@ -59,8 +59,8 @@
                         >{{teamListObj.statusCode}}</span></div>
                     </div>
                     <div class="col-sm-2" style="text-align: right;">
-                      <div style="width: 100px;" *ngIf="teamListObj.statusCode != 'Active'"   (click)="changeTeamStatus(teamListObj,'Active')" class="btn button-save ml-10">Active</div>
-					            <div  style="width: 100px;" *ngIf="teamListObj.statusCode == 'Active'"  (click)="changeTeamStatus(teamListObj,'Inactive')" class="btn button-save ml-10">InActive</div>
+                      <div style="width: 100px;" *ngIf="teamListObj.statusCode != 'Active' && teamListObj.usertype !='Idea Owner'"   (click)="changeTeamStatus(teamListObj,'Active')" class="btn button-save ml-10">Active</div>
+					            <div  style="width: 100px;" *ngIf="teamListObj.statusCode == 'Active' && teamListObj.usertype !='Idea Owner'"  (click)="changeTeamStatus(teamListObj,'Inactive')" class="btn button-save ml-10">InActive</div>
 				
                     </div>
                   </div>
