--- a/src/app/work-space/work-space-team/work-space-team.component.html
+++ b/src/app/work-space/work-space-team/work-space-team.component.html
@@ -45,7 +45,7 @@
                       <div class="font-semibold pl-8">{{teamListObj.userName}}</div>
                     </div>
                     <div class="col-sm-3">
-                      <div>{{teamListObj.email}}</div>
+                      <div><img src="assets/images/edit-icon.svg" class="edit-icon">{{teamListObj.email}}</div>
                     </div>
                     <div class="col-sm-2">
                       <div>{{teamListObj.usertype}}</div>
