--- a/src/app/work-space/work-space-development-document/work-space-development-document.component.html
+++ b/src/app/work-space/work-space-development-document/work-space-development-document.component.html
@@ -160,7 +160,7 @@
       </div>
       -->
       <div class="row pl-3 pt-3">
-        <div class="heading processflow_pt1_css processflow_pt_20">Existing Reviewer</div>
+        <div class="heading processflow_pt1_css processflow_pt_20">Reviewers Assigned</div>
       </div>
       <div class="row" *ngIf="existingReviewer.length ==0">
         <div class="col-sm-12">
