--- a/src/app/work-space/work-space-prototype/work-space-prototype.component.html
+++ b/src/app/work-space/work-space-prototype/work-space-prototype.component.html
@@ -71,7 +71,7 @@
           </div>
           -->
           <div class="row pl-3 pt-3">
-            <div class="heading wireframe_pt1_css wireframe_pt_20">Existing Reviewer</div>
+            <div class="heading wireframe_pt1_css wireframe_pt_20">Reviewers Assigned</div>
           </div>
           <div class="row" *ngIf="existingReviewer.length ==0">
             <div class="col-sm-12">
