--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -7379,3 +7379,11 @@ sup {
   margin: 20px;
   margin-top: 20px !important;
 }
+
+.swal2-styled.swal2-confirm{
+  background-color:#72308b !important;
+  border: 0px solid none !important;
+}
+.swal2-actions:not(.swal2-loading) .swal2-styled:hover{
+  background-image: none !important;
+}
