--- a/src/app/subscription/manage-subscription/manage-subscription.component.html
+++ b/src/app/subscription/manage-subscription/manage-subscription.component.html
@@ -105,16 +105,18 @@
           <div class="col-sm-12">
             <div class=" p-all-10">
               <div class="row">
-                  <div class="col-sm-5">
+                  <div class="col-sm-4">
                     <div class="ft-18">Email</div>
                   </div>
                   <div class="col-sm-5">
                     <div class="ft-18">Name</div>
                   </div>
-                  <div class="col-sm-2">
+                  <div class="col-sm-1">
                     <div class="ft-18 text-center">Status</div>
                   </div>
-    
+                  <div class="col-sm-2">
+                    <div class="ft-18 text-center"></div>
+                  </div>
                 </div>
               </div>
               <div>
@@ -123,15 +125,21 @@
                   <div class="bg-white border-gray mt-10 radius-all-3 lh-40" *ngFor="let item of membersList">
                     <div class="row">
     
-                      <div class="col-sm-5">
-                        <div class="font-semibold pl-8">{{item.email}}</div>
+                      <div class="col-sm-4">
+                        <div class="font-semibold pl-8"><img src="assets/images/edit-icon.svg" class="edit-icon">{{item.email}}</div>
                       </div>
                       <div class="col-sm-5">
                         <div>{{item.userName}}</div>
                       </div>
-                      <div class="col-sm-2">
-                        <div [ngClass]="{'badge-status badge-done ft-white': (item.statusCode == 'Active'),
-                        'badge-status bg-light-gray' : (item.statusCode == 'Inactive')}" class="text-center">{{item.statusCode}}</div>
+                      <div class="col-sm-1">
+                        <div><span class="badge badge-accepted"
+                          [ngClass]="{'badge-rejected action_status_rejected': item.statusCode == 'Inactive'}"
+                          >{{item.statusCode}}</span></div>
+                      </div>
+                      <div class="col-sm-2" style="text-align: center;">
+                        <div style="width: 100px;" *ngIf="item.statusCode != 'Active' && item.userType !='Idea Owner'"   (click)="changeTeamStatus(teamListObj,'Active')" class="btn button-save ml-10">Active</div>
+                        <div  style="width: 100px;" *ngIf="item.statusCode == 'Active' && item.userType !='Idea Owner'"  (click)="changeTeamStatus(teamListObj,'Inactive')" class="btn button-save ml-10">InActive</div>
+          
                       </div>
                     </div>
                   </div>
