--- a/src/app/work-space/work-space-information-architecture/work-space-information-architecture.component.html
+++ b/src/app/work-space/work-space-information-architecture/work-space-information-architecture.component.html
@@ -1,17 +1,19 @@
-<main>
+<main class="mr-15">
   <div class="container-fluid">
     <div id="Tab3" class="tabcontent">
       <div class="tab-header">
         <div class="tab-header">
-          <div class="tab-heading">Application Flow</div>
+          <div class="page-heading mt-0">Application Flow</div>
         </div>
 
 
         <button *ngIf="commonService.getRole() !='reviewer'" class="btn btn-outline mr10px"
           (click)="upload()">Add/Replace Image</button>
+          <div class="clear-float"></div>
         <!-- <button class="btn button-save" data-toggle="modal" data-target="#myModal">Upload</button> -->
-        <hr>
-        <div *ngIf="allUploadedFile.length>0" class="carousel-container">
+        <div class="row">
+          <div class="col-sm-10">
+        <div *ngIf="allUploadedFile.length>0" class="carousel-container  mt-40">
           <div class="carousel slide" data-ride="carousel" data-type="multi" data-interval="false" id="myCarousel">
 
             <!-- Wrapper for slides -->
@@ -20,7 +22,7 @@
                 <img [src]="getSantizeUrl(allFile.imageUrl) " width="100%" height="100%" alt="Image" />
 
               </div>
-              <img *ngIf="allUploadedFileIndex.length>0" src="assets/images/zoom-icon.png">
+              <img *ngIf="allUploadedFileIndex.length>0" src="assets/images/zoom.svg" class="carousel-zoom-icon">
             </div>
 
             <!-- Left and right controls -->
@@ -39,6 +41,8 @@
         <div *ngIf="allUploadedFile.length<=0" class="item">
           <img src="assets/images/noData.png " width="100%" height="100%" alt="Image" />
         </div>
+        </div>
+        <div class="col-sm-2">
         <div *ngIf="allUploadedFile.length>0" class="slider-container">
           <div class="slider-heading">{{heading}}</div>
           <div class="slider-content">{{desc}}</div>
@@ -49,11 +53,14 @@
           </div>
         </div>
       </div>
+    </div>
+      </div>
+    
 
       <div class="clear-float"></div>
       <form class="form-horizontal" [formGroup]="formGroup">
         <div *ngIf="commonService.getRole() !='developer'" class="row">
-          <div class="col-sm-9 pr-0 processflow_pt_20">
+          <div class="col-sm-10 pr-0 processflow_pt_20">
             <div class="form-group">
               <label class="control-label width-125 " for="cname">Review Comments</label>
               <textarea formControlName="reviewComment" class="form-control rounded-0 bg-white" id="reviewComment" rows="3"
@@ -66,16 +73,16 @@
         </div>
       </form>
       <div *ngIf="commonService.getRole() !='developer'" class="row pt-4">
-        <div class="col-sm-9 text-right ">
-          <button class="btn button-save ml-3" (click)="saveComments()">Save</button>
+        <div class="col-sm-10">
+          <button class="btn button-save" (click)="saveComments()">Save</button>
         </div>
       </div>
       <div *ngIf="commonService.getRole() =='idea-owner'" class="review-container">
-        <div class="heading processflow_css processflow_pt0_css">Request Review</div>
+        <div class="page-sub-heading section-spacing">Request Review</div>
         <div class="row">
           <div class="col-sm-3 pr-0">
             <div class="form-group">
-              <select class="form-control" [(ngModel)]="selectedRole" (change)="onChangeReview($event)">
+              <select class="txt-outline w-100" [(ngModel)]="selectedRole" (change)="onChangeReview($event)">
                 
                 <option *ngFor="let item of reviewers" value={{item.userId}} id={{item.userId}}>{{item.userName}}
                 </option>
@@ -85,7 +92,7 @@
           <div class="col-sm-2 pl-10 pb-20">
             <!--<button (click)="selectReviewer()" class="btn button-save">Select</button>
         --> 
-        <button (click)="mapReviewer()" class="btn button-save">Request Review</button>
+        <button (click)="mapReviewer()" class="btn btn-outline-purple">Request Review</button>
           </div>
         </div>
         <!--
@@ -105,8 +112,8 @@
           </div>
         </div>
         -->
-        <div class="row pl-3 pt-3">
-          <div class="heading processflow_pt1_css processflow_pt_20">Reviewers Assigned</div>
+        <div class="row pl-3">
+          <div class="page-sub-heading section-spacing">Reviewers Assigned</div>
         </div>
         <div class="row" *ngIf="existingReviewer.length ==0">
           <div class="col-sm-12">
@@ -131,25 +138,25 @@
 
 
       <div [ngClass]="{'processflow_pt_20': commonService.getRole() !='idea-owner'}"
-        class="ft-16 processflow_css processflow_pt1_css">Comments Received</div>
+        class="page-sub-heading section-spacing">Comments Received</div>
       <table id="example" class="table table-custom">
         <thead>
           <tr>
-            <th></th>
+            <th>Edit</th>
             <th>Date</th>
             <th>Reviewer</th>
             <th>Comments</th>
             <th *ngIf="commonService.getRole() =='idea-owner'">Accept</th>
             <th *ngIf="commonService.getRole() =='idea-owner'">Reject</th>
             <th *ngIf="commonService.getRole() =='idea-owner'"> Assigned to</th>
-            <th>Status</th>
+            <th class="align-center">Status</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let commentsReceiveddtl of commentsReceived">
             <td>
               <a *ngIf="commentsReceiveddtl.commentStatus !='Closed' && ( commonService.getRole() =='idea-owner' ||   (commentsReceiveddtl.assignedToUserName !=null && commonService.getRole() =='developer' &&  commentsReceiveddtl.commentStatus =='Allocated' ) ||   (commentsReceiveddtl.assignedToUserName !=null && commonService.getRole() =='developer' &&  commentsReceiveddtl.commentStatus =='In-Progress' )  ||   (commentsReceiveddtl.assignedToUserName !=null && commonService.getRole() =='reviewer' &&  commentsReceiveddtl.commentStatus =='Completed' ) ) "  (click)="editComments(commentsReceiveddtl)" style="cursor: pointer;">
-                <i class="fa fa-edit" style="font-size: 14px;"></i>
+                <img src="assets/images/edit-icon.svg" class="edit-icon">
               </a>
             </td>
             <td>{{commonService.convertDateTimeFormat(commentsReceiveddtl.enteredDate, 'true')}}</td>
@@ -174,3 +181,9 @@
     </div>
   </div>
 </main>
+
+<footer>
+  <div class="container-fluid">
+      <div class="footer">©HiveZen.All rights reserved</div>
+  </div>
+</footer>
